--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         <option value="game008">總測驗</option>
         <option value="game009">game009</option>
         <option value="LED">LED</option>
+        <option value="animate">animate</option>
         
 
       </select>
